--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.0.0",
     "@capacitor/core": "2.4.6",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/diagnostic": "^5.31.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
